Removed Github Icon

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<p>Tech Enthusiast &nbsp;&bull;&nbsp; Student</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.linkedin.com/in/stephanie-yung/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/stephanie-yung" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/stephanie-yung/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<!-- <li><a href="https://github.com/stephanie-yung" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
 								<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 							</ul>
 						</nav>
