--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="https://www.linkedin.com/in/stephanie-yung/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<!-- <li><a href="https://github.com/stephanie-yung" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
-								<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+								<li><a href="mailto:stephanie.j.yung@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
