--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<link
+      rel="icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpLkf1WvZ_kFMuZIzKXNpE-xK7fPgZV0CM-g&usqp=CAU"
+    />
 	<head>
 		<title>Stephanie Yung</title>
 		<meta charset="utf-8" />
