--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/SY_headshot2square.jpeg" alt="" /></a>
 					<h1><strong>Stephanie Yung</strong>
-					<br />Computer Science Student<br />
-					New York, NY
+					<!-- <br>Computer Science Student
+					<br> New York, NY -->
 					</h1>
+					<p style="font-size:22px">Computer Science Student</p>
+					<p style="font-size:22px">New York, NY</p>
 				</div>
 			</header>
 
