Removed hyperlink from photo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/SY_headshot2square.jpeg" alt="" /></a>
+					<a class="image avatar"><img src="images/SY_headshot2square.jpeg" alt="" /></a>
 					<h1><strong>Stephanie Yung</strong>
 					<!-- <br>Computer Science Student
 					<br> New York, NY -->
