Updated Tutoring Hours

--- a/index.html
+++ b/index.html
@@ -53,21 +53,28 @@
 					<section id="two">
 						<h1>Tutoring Hours</h1>
 						<div class="row">
-							<h2>CSCI 127 (Introduction to Computer Science)</h2>
+							<h2>CSCI 127 (Introduction to Computer Science) - Lab Review</h2>
 							
 							<article class="col-6 col-12-small work-item">
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a> -->
 								<h3>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Monday: 12:30-3:30pm
+									Tuesday: 3:00-4:30pm
+								</h3>
+
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+							</article>
+							<h2>CSCI 127 (Introduction to Computer Science) - Drop-In Tutoring</h2>
+							
+							<article class="col-6 col-12-small work-item">
+								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a> -->
+								<h3>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									Monday: 11:00-2:00pm
 								</h3>
 								<h3>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Wednesday: 2:00-5:00pm
-								</h3>
-								<h3>
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Thursday: 3:30-5:00pm
+									Thursday: 2:00-3:30pm
 								</h3>
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							</article>
@@ -98,7 +105,7 @@
 							</article> -->
 						</div>
 						<ul class="actions">
-							<li><a href="https://huntercsci127.github.io/f20.html" class="button">Course Webpage</a></li>
+							<li><a href="https://huntercsci127.github.io/s21.html" class="button">Course Webpage</a></li>
 						</ul>
 					</section>
 
