--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 						<header class="major">
 							<h1>About Me!</h1>
 						</header>
-						<li>Junior at Hunter College</li>
+						<li>Rising Senior at Hunter College</li>
+						<li>Expected graduation: May 2022</li>
 						<li>Major: Computer Science</li>
 						<li>Minor: Mathematics</li>
 						<li>Undergraduate Teaching Assistant</li>
